--- a/hello1_docker.yaml
+++ b/hello1_docker.yaml
@@ -1,10 +1,10 @@
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: hello1-template
 objects:
 - kind: ImageStream
-  apiVersion: v1
+  apiVersion: image.openshift.io/v1
   metadata:
     annotations:
     labels:
@@ -14,7 +14,7 @@ objects:
     lookupPolicy:
       local: false
 - kind: "BuildConfig"
-  apiVersion: "v1"
+  apiVersion: build.openshift.io/v1
   metadata:
     name: "hello1" 
     labels:
@@ -33,7 +33,7 @@ objects:
         type: "ImageChange"
     source: 
       git:
-        uri: "https://github.com/tsrana/spring-boot-hello-world"
+        uri: "https://github.com/bschonec/spring-boot-hello-world"
     strategy:
       type: Docker
       dockerStrategy:
@@ -43,7 +43,7 @@ objects:
         kind: "ImageStreamTag"
         name: "hello1:latest"
 - kind: "DeploymentConfig"
-  apiVersion: "v1"
+  apiVersion: apps.openshift.io/v1
   metadata:
     name: "hello1"
     labels:
