--- a/hello2_source.yaml
+++ b/hello2_source.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: hello2-template
@@ -33,7 +33,7 @@ objects:
         type: "ImageChange"
     source: 
       git:
-        uri: "https://github.com/tsrana/spring-boot-hello-world"
+        uri: "https://github.com/bschonec/spring-boot-hello-world"
     strategy: 
       sourceStrategy:
         from:
